fixed flicker on hover

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
 }
 
 .watch-film {
-	background-color: var(--success);
+	background-color: var(--dark);
 	color: var(--light);
 }
 
